--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,12 +31,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
 
-    <title>React App</title>
+    <title>Appiness React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- This is to display the modal as the child of the HTML document instead of a parent React component  -->
     <div id="modal"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
